# parsing

./: README.md  hh_vacancies.json  pyproject.toml
src/: api_class.py  config.py  excel.py  file_creating.py  g.json  hh_vacancies.json  main.py  superjob_vacancies.json  tests.py  vacancies.xlsx  vacancy.py
